Starting unpacking article

--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ theme_mode:   dark # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: https://avatars.githubusercontent.com/u/22428720?v=4
+avatar: https://avatars.githubusercontent.com/u/22428720
 
 # boolean type, the global switch for ToC in posts.
 toc: true
